syntax = "proto3";

option csharp_namespace = "BoardService.Contracts";

package board.column;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "board-types.proto";

service BoardColumnService {
  rpc Create (CreateBoardColumnRequest) returns (board.types.BoardColumnDto);
  rpc GetById (GetBoardColumnByIdRequest) returns (board.types.BoardColumnDto);
  rpc GetManyByBoardId (GetManyBoardColumnsByBoardIdRequest) returns (GetManyBoardColumnsByBoardIdResponse);
  rpc Update (UpdateBoardColumnRequest) returns (board.types.BoardColumnDto);
  rpc Delete (DeleteBoardColumnRequest) returns (google.protobuf.Empty);
}

message CreateBoardColumnRequest {
  string name = 1;
  int32 order = 2;
  string board_id = 3;
}

message GetBoardColumnByIdRequest {
  string board_column_id = 1;
  string board_id = 2;
}

message GetManyBoardColumnsByBoardIdRequest {
  string board_id = 1;
}

message GetManyBoardColumnsByBoardIdResponse {
  repeated board.types.BoardColumnDto board_columns = 1;
}

message UpdateBoardColumnRequest {
  string board_column_id = 1;
  string name = 2;
  int32 order = 3;
  string board_id = 4;
}

message DeleteBoardColumnRequest {
  string board_column_id = 1;
  string board_id = 2;
}
