syntax = "proto3";

option csharp_namespace = "BoardService.Contracts";

package board;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "board-types.proto";

service BoardService {
  rpc Create (CreateBoardRequest) returns (BoardDto);
  rpc GetById (GetBoardByIdRequest) returns (BoardDto);
  rpc GetMany (GetManyBoardsRequest) returns (GetManyBoardsResponse);
  rpc Update (UpdateBoardRequest) returns (BoardDto);
  rpc Delete (DeleteBoardRequest) returns (google.protobuf.Empty);
}

message BoardTypeDto {
  string id = 1;
  string name = 2;
  bool is_essential = 3;
}

message BoardDto {
  string id = 1;
  string name = 2;
  BoardTypeDto board_type = 3;
  string project_id = 4;
  string created_by_user_id = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  repeated board.types.BoardColumnDto columns = 8;
}

message CreateBoardRequest {
  string name = 1;
  string board_type_id = 2;
  string project_id = 3;
}

message GetBoardByIdRequest {
  string board_id = 1;
  string project_id = 2;
}

message GetManyBoardsRequest {
  string project_id = 1;
}

message GetManyBoardsResponse {
  repeated BoardDto boards = 1;
}

message UpdateBoardRequest {
  string board_id = 1;
  string project_id = 2;
  string name = 3;
}

message DeleteBoardRequest {
  string board_id = 1;
  string project_id = 2;
}
