syntax = "proto3";

option csharp_namespace = "ProjectService.gRPC";

package project;

import "google/protobuf/empty.proto";
import "Protos/project-types.proto";

service ProjectService {
  rpc Create (CreateProjectRequest) returns (project.types.ProjectDto);
  rpc GetById (GetProjectByIdRequest) returns (project.types.ProjectDto);
  rpc GetMany (GetManyProjectsRequest) returns (GetManyProjectsResponse);
  rpc Update (UpdateProjectRequest) returns (project.types.ProjectDto);
  rpc Delete (DeleteProjectRequest) returns (google.protobuf.Empty);
}

message CreateProjectRequest {
  string name = 1;
  string description = 2;
  string organizationId = 3;
  string slug = 4;
  project.types.ProjectVisibility visibility = 5;
  repeated CreateProjectWithUserItem members = 6;
}

message CreateProjectWithUserItem {
  string projectId = 1;
  string userId = 2;
  project.types.ProjectMemberRole role = 3;
}

message GetProjectByIdRequest {
  string projectId = 1;
  string organizationId = 2;
}

message GetManyProjectsRequest {
  string organizationId = 1;
  repeated string projectIds = 2;
}

message GetManyProjectsResponse {
  repeated project.types.ProjectDto projects = 1;
}

message UpdateProjectRequest {
  string projectId = 1;
  string organizationId = 2;
  string name = 3;
  string description = 4;
  string slug = 5;
  project.types.ProjectVisibility visibility = 6;
}

message DeleteProjectRequest {
  string projectId = 1;
  string organizationId = 2;
}
